<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/keybord_ly"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/g_underframe"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingEnd="2dp"
    android:paddingStart="2dp"
    android:paddingTop="5dp"
    android:visibility="visible"
    tools:showIn="@layout/gb_series_foot">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <Button
            android:id="@+id/keybord_1"
            style="@style/w0h"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/rect_gray_press"
            android:text="@string/one"/>

        <Button
            android:id="@+id/keybord_2"
            style="@style/w0h"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/rect_gray_press"
            android:text="@string/two"/>

        <Button
            android:id="@+id/keybord_3"
            style="@style/w0h"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/rect_gray_press"
            android:text="@string/three"/>

        <Button
            android:id="@+id/keybord_4"
            style="@style/w0h"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/rect_gray_press"
            android:text="@string/four"/>

        <Button
            android:id="@+id/keybord_5"
            style="@style/w0h"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/rect_gray_press"
            android:text="@string/five"/>

        <Button
            android:id="@+id/keybord_6"
            style="@style/w0h"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/rect_gray_press"
            android:text="@string/six"/>

        <Button
            android:id="@+id/keybord_7"
            style="@style/w0h"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/rect_gray_press"
            android:text="@string/seven"/>

        <Button
            android:id="@+id/keybord_8"
            style="@style/w0h"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/rect_gray_press"
            android:text="@string/eight"/>

        <Button
            android:id="@+id/keybord_9"
            style="@style/w0h"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/rect_gray_press"
            android:text="@string/nine"/>

        <Button
            android:id="@+id/keybord_0"
            style="@style/w0h"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/rect_gray_press"
            android:text="@string/zero"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/keybord_thousand"
            style="@style/w0h"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/rect_gray_press"
            android:text="@string/thousand"/>

        <Button
            android:id="@+id/keybord_ten_thousand"
            style="@style/w0h"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/rect_gray_press"
            android:text="@string/ten_thousand"/>

        <Button
            android:id="@+id/keybord_hundred_thousand"
            style="@style/w0h"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/rect_gray_press"
            android:text="@string/hundrod_thousand"/>

        <Button
            android:id="@+id/keybord_million"
            style="@style/w0h"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/rect_gray_press"
            android:text="@string/million"/>

        <Button
            android:id="@+id/keybord_all"
            style="@style/w0h"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_weight="2"
            android:background="@drawable/rect_gray_press"
            android:text="@string/all_in"/>

        <Button
            android:id="@+id/keybord_clear"
            style="@style/w0h"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/rect_gray_press"
            android:text="@string/clear"/>

        <Button
            android:id="@+id/keybord_confirm"
            style="@style/w0h"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/rect_orange"
            android:text="@string/confirm"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>