<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <include layout="@layout/top_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:saveEnabled="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/allow_regiset_protocol_all"
                android:textColor="@color/gray1"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:lineSpacingExtra="6dp"
                android:padding="10dp"
                android:text="@string/allow_regiset_protocol_1"
                android:textColor="@color/gray6"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:lineSpacingExtra="6dp"
                android:padding="10dp"
                android:text="@string/allow_regiset_protocol_2"
                android:textColor="@color/gray6"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/allow_regiset_protocol_all_2"
                android:textColor="@color/gray1"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:lineSpacingExtra="6dp"
                android:padding="10dp"
                android:text="@string/allow_regiset_protocol_21"
                android:textColor="@color/gray6"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/allow_regiset_protocol_all_3"
                android:textColor="@color/gray1"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:lineSpacingExtra="6dp"
                android:padding="10dp"
                android:text="@string/allow_regiset_protocol_31"
                android:textColor="@color/gray6"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/allow_regiset_protocol_all_4"
                android:textColor="@color/gray1"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:lineSpacingExtra="6dp"
                android:padding="10dp"
                android:text="@string/allow_regiset_protocol_41"
                android:textColor="@color/gray6"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/allow_regiset_protocol_all_5"
                android:textColor="@color/gray1"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:lineSpacingExtra="6dp"
                android:padding="10dp"
                android:text="@string/allow_regiset_protocol_51"
                android:textColor="@color/gray6"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/allow_regiset_protocol_all_6"
                android:textColor="@color/gray1"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:lineSpacingExtra="6dp"
                android:padding="10dp"
                android:text="@string/allow_regiset_protocol_61"
                android:textColor="@color/gray6"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/allow_regiset_protocol_all_7"
                android:textColor="@color/gray1"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:lineSpacingExtra="6dp"
                android:padding="10dp"
                android:text="@string/allow_regiset_protocol_71"
                android:textColor="@color/gray6"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/allow_regiset_protocol_all_8"
                android:textColor="@color/gray1"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:lineSpacingExtra="6dp"
                android:padding="10dp"
                android:text="@string/allow_regiset_protocol_81"
                android:textColor="@color/gray6"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/allow_regiset_protocol_all_9"
                android:textColor="@color/gray1"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:lineSpacingExtra="6dp"
                android:padding="10dp"
                android:text="@string/allow_regiset_protocol_91"
                android:textColor="@color/gray6"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/allow_regiset_protocol_all_ten"
                android:textColor="@color/gray1"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:lineSpacingExtra="6dp"
                android:padding="10dp"
                android:text="@string/allow_regiset_protocol_ten_1"
                android:textColor="@color/gray6"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:lineSpacingExtra="6dp"
                android:padding="10dp"
                android:paddingEnd="0dp"
                android:paddingStart="10dp"
                android:text="@string/register_protocol_bottom"
                android:textColor="@color/gray6"
                android:textSize="15sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>