<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="80dp"
              android:background="@color/white"
              android:gravity="center_vertical"
              android:orientation="horizontal">

    <TextView
        android:id="@+id/diamonds_record_time"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/all_time"
        android:textColor="@color/gray6"
        android:textSize="13sp"/>

    <TextView
        android:id="@+id/diamonds_record_context"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:textColor="@color/gray1"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/say_arrice_ty"
        />
    <TextView
        android:id="@+id/diamonds_record_change_num"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:textSize="13sp"
                      android:gravity="center"
                      android:textColor="@color/gray2"
                        android:text="@string/good_num"/>
</LinearLayout>